jira/ingress-confluence.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: confluence-ingress
  namespace: confluence
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wiki.cngei.it`)
      services:
        - kind: Service
          name: confluence-helm
          port: 80
  tls:
    secretName: confluence-tls
