jira/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jira-ingress
  namespace: jira
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`help.cngei.it`)
      services:
        - kind: Service
          name: jira-helm
          port: 80
  tls:
    secretName: jira-tls
